--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "sdl_image.h": "c",
         "sdl.h": "c",
         "sdl_video.h": "c",
-        "begin_code.h": "c"
+        "begin_code.h": "c",
+        "limits": "c"
     }
 }
