--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-    "files.associations": {
-        "sdl_image.h": "c",
-        "sdl.h": "c",
-        "sdl_video.h": "c",
-        "begin_code.h": "c",
-        "limits": "c"
-    }
+    "files.associations": {}
 }
