Massive rewrite (WIP 2)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "stdlib.h": "c",
         "items.h": "c",
         "aliens.h": "c",
-        "debug.h": "c"
+        "debug.h": "c",
+        "sdl_image.h": "c"
     }
 }
