Massive rewrite (WIP 4) / FPS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "items.h": "c",
         "aliens.h": "c",
         "debug.h": "c",
-        "sdl_image.h": "c"
+        "sdl_image.h": "c",
+        "event.h": "c"
     }
 }
